--- a/Dynamic_Programming/70. Climbing Stair.md
+++ b/Dynamic_Programming/70. Climbing Stair.md
@@ -1,24 +1,17 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2761
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+# 70. Climbing Stairs
 
-\f0\fs24 \cf0 # 70. Climbing Stairs\
-\
-## Problem Statement\
-\
+## Problem Statement
+
 You are climbing a staircase. It takes `n` steps to reach the top.\
-\
-Each time you can either climb 1 or 2 steps. In how many distinct ways can you climb to the top?\
-\
-## Solution\
-\
-```python\
-class Solution:\
-    def climbStairs(self, n: int) -> int:\
-        F = [1, 1]\
-        for i in range(2, n+1):\
-            F.append(F[i-2]+F[i-1])\
+
+Each time you can either climb 1 or 2 steps. In how many distinct ways can you climb to the top?
+
+## Solution
+
+```python
+class Solution:
+    def climbStairs(self, n: int) -> int:
+        F = [1, 1]
+        for i in range(2, n+1):
+            F.append(F[i-2]+F[i-1])
         return F[n]}
